--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body></body>
+  <body>
+    <div id="turns">TURN : 0</div>
+    <div id="board">
+      <div id="gameboard1" class="gameboard">gameboard1</div>
+      <div id="turnIndicator">1 ou 2</div>
+      <div id="gameboard2" class="gameboard">gameboard2</div>
+    </div>
+  </body>
 </html>
